LPS-119701 Prevent overflow in SEO/OG preview description

--- a/modules/apps/layout/layout-seo-web/src/main/resources/META-INF/resources/css/main.scss
+++ b/modules/apps/layout/layout-seo-web/src/main/resources/META-INF/resources/css/main.scss
@@ -16,6 +16,10 @@
 		min-height: $line-height-base * 1em;
 	}
 
+	&-description {
+		word-break: break-all;
+	}
+
 	&-title {
 		font-size: 1rem;
 	}
